test/parsing/ferguson/assign-op-in-conditional.good
assign-op-in-conditional.chpl:4: error: Assignment operation += is illegal in a conditional
