test/parsing/ferguson/assign-op-in-conditional.chpl
var a = 1;
var b = 2;

if a += b {
  writeln("A");
} else {
  writeln("B");
}
